manifests/elasticsearch/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: reporter-elasticsearch
  labels:
    app: elasticsearch
spec:
  ports:
  - name: db
    port: 9200
    protocol: TCP
    targetPort: db
  selector:
    app: elasticsearch
