manifests/elasticsearch/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: reporter-elasticsearch
  labels:
    app: kibana
spec:
  ports:
  - name: ui
    port: 5601
    protocol: TCP
    targetPort: ui
  selector:
    app: kibana
