manifests/elasticsearch/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: reporter-elasticsearch
  annotations:
    certmanager.k8s.io/issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: kibana-ingress-basic-auth
spec:
  rules:
  - host: kibana.FIXME
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: ui
  tls:
  - hosts:
    - kibana.FIXME
    secretName: kibana-tls
